# move-clippy

./: .gitignore  AUTOFIX_QUICKWIN_SPEC.md  AUTOFIX_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  Cargo.toml  LINT_QUALITY_ASSESSMENT.md  PHASE_3_PROGRESS_SUMMARY.md  README.md  STABILITY.md  SYSTEMATIC_FIX_PLAN.md  cleanup-internal-files.sh
.github/workflows/: lint-quality.yml
baselines/: baseline_0.3.0.json
benchmark_repos/: REPOS.txt
docs/: ARCHITECTURE_REVIEW.md  DEPRECATED_LINT_REMOVAL.md  DEVELOPMENT.md  ECOSYSTEM_REPOS.md  FORMAL_LINT_SPECS.md  FP_ANALYSIS_AND_FIXES.md  FP_PREVENTION.md  GOLDEN_TESTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_GOLDEN_TESTS.md  LINT_CATALOG_SUMMARY.md  LINT_DEVELOPMENT_GUIDE.md  LINT_REFERENCE.md  PHASE_I_SUMMARY.md  README.md  SECURITY_LINTS.md  SEMANTIC_LINTER_EXPANSION_SPEC.md  SEMANTIC_LINT_STATUS.md  SEMANTIC_SPLIT_PLAN.md  STABILITY.md  TYPE_SYSTEM_GAPS.md
docs/archive/: AST_INVESTIGATION.md  DATAFLOW_ANALYSIS_GAPS.md  DEPRECATED_LINT_REMOVAL.md  GPT-5.2-Comprehensive-Overview.md  HLIR_CONSTANT_HANDLING.md  KEY_STORE_PROXY_ANALYSIS.md  LINT_GROUNDING_ANALYSIS.md  LINT_INVENTORY_SNAPSHOT_2025-12-18.md  PHASE2_COMPLETE.md  PHASE2_FIX_SUMMARY.md  PHASE_II_III_COMPLETION_SUMMARY.md  PHASE_II_III_IMPLEMENTATION.md  PHASE_I_SUMMARY.md  SEMANTIC_LINT_FIXES.md
docs/local_lint_plan/: PHASE_3_COMPLETION_SPEC.md
docs/notes/: GPT-5.2-Audit-Research-Cross-Chain.md
scripts/: compare_baselines.py  ecosystem_benchmark.py
src/: absint_lints.rs  annotations.rs  cli.rs  config.rs  cross_module_lints.rs  diagnostics.rs  error.rs  fix.rs  fixer.rs  framework_catalog.rs  guard_utils.rs  level.rs  lib.rs  lint.rs  main.rs  parser.rs  rules.rs  semantic.rs  suppression.rs  telemetry.rs  triage.rs  type_classifier.rs  unified.rs  visitor.rs
src/rules/: conventions.rs  modernization.rs  patterns.rs  security.rs  style.rs  test_quality.rs  util.rs
src/semantic/: descriptors.rs  mod.rs  util.rs
src/semantic/lints/: ability.rs  capability.rs  entry.rs  event.rs  fungible.rs  iteration.rs  mod.rs  oracle.rs  random.rs  receipt.rs  shared.rs  sui_delegated.rs  value_flow.rs  witness.rs
tests/: config.rs  copyable_capability_spec.rs  droppable_capability_spec.rs  droppable_hot_potato.rs  ecosystem.rs  ecosystem_snapshots.rs  entry_function_returns_value_spec.rs  expect_deny_integration.rs  fix_tests.rs  fixtures_snapshots.rs  golden_tests.rs  lints.rs  meta_invariants.rs  non_transferable_fungible_object_spec.rs  phase2_phase3_integration.rs  preview_gating_full_mode.rs  private_entry_function_spec.rs  semantic.rs  semantic_directives_full_mode.rs  semantic_package_snapshots.rs  semantic_snapshots.rs  share_owned_authority_spec.rs  spec_tests.rs  sui_lints.rs  suppression.rs  syntactic_snapshots.rs
tests/baselines/: cetus-clmm.json  deepbookv3.json  openzeppelin-sui.json  scallop-lend.json
tests/ecosystem_validation/: FP_ANALYSIS.md  INITIAL_ANALYSIS.md  README.md  TRIAGE_REPORT.md  calculate_metrics.py  run_all.sh  triage.json  triage_samples.json  triage_schema.json  triage_template.json
tests/ecosystem_validation/analysis/: FP_PATTERNS.md  LINT_RECOMMENDATIONS.md  SECURITY_TRIAGE.md
tests/ecosystem_validation/decisions/: droppable_hot_potato.md
tests/ecosystem_validation/findings/: alphalend.json  bluefin-integer.json  bluefin-pro.json  bluefin-spot.json  cetus-clmm.json  deepbookv3.json  manifest.json  steamm.json  (+4 more)
tests/fixtures/: README.md
tests/snapshots/: ecosystem_snapshots__embedded_fixtures__event_structs.snap  ecosystem_snapshots__embedded_fixtures__modern_patterns.snap  ecosystem_snapshots__embedded_fixtures__otw_correct.snap  ecosystem_snapshots__embedded_fixtures__ownable_pattern.snap  ecosystem_snapshots__embedded_fixtures__two_step_transfer.snap  semantic_package_snapshots__capability_antipatterns_pkg_stable.snap  semantic_package_snapshots__capability_transfer_literal_address_pkg_preview.snap  semantic_package_snapshots__copyable_capability_pkg_preview.snap  semantic_package_snapshots__copyable_capability_pkg_stable.snap  semantic_package_snapshots__copyable_fungible_type_pkg_experimental.snap  semantic_package_snapshots__destroy_zero_unchecked_pkg_preview.snap  semantic_package_snapshots__droppable_capability_pkg_stable.snap  semantic_package_snapshots__droppable_flash_loan_receipt_pkg_experimental.snap  semantic_package_snapshots__event_past_tense_pkg_stable.snap  semantic_package_snapshots__generic_type_witness_unused_pkg_experimental.snap  semantic_package_snapshots__mut_key_param_missing_authority_pkg_preview.snap  semantic_package_snapshots__mut_ref_not_mutated_pkg_stable.snap  semantic_package_snapshots__non_transferable_fungible_object_pkg_stable.snap  semantic_package_snapshots__public_package_single_module_pkg_stable.snap  semantic_package_snapshots__public_random_access_v2_pkg_stable.snap  semantic_package_snapshots__receipt_missing_phantom_type_pkg_experimental.snap  semantic_package_snapshots__share_owned_authority_pkg_experimental.snap  semantic_package_snapshots__share_owned_authority_pkg_preview.snap  semantic_package_snapshots__share_owned_authority_pkg_stable.snap  semantic_package_snapshots__shared_capability_object_pkg_preview.snap  semantic_package_snapshots__unbounded_iteration_over_param_vector_pkg_preview.snap  semantic_package_snapshots__unchecked_div_pkg_preview.snap  semantic_package_snapshots__witness_antipatterns_pkg_stable.snap  semantic_snapshots__unused_return_value_negative.snap  semantic_snapshots__unused_return_value_positive.snap  sui_lints__coin_field.snap  sui_lints__collection_equality.snap  sui_lints__custom_state_change.snap  sui_lints__custom_state_change.snap.new  sui_lints__false_negative_lint_missing_key.snap  sui_lints__false_positive_share_owned.snap  sui_lints__freeze_wrapped.snap  sui_lints__freezing_capability_false_positives.snap  sui_lints__freezing_capability_true_positives.snap  sui_lints__public_random_invalid.snap  (+15 more)
tests/support/: README.md  mod.rs  semantic_spec_harness.rs
(+226 files in other folders)
